--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose",
     "lint": "eslint ."
   },
   "repository": {
@@ -27,6 +27,10 @@
   },
   "devDependencies": {
     "eslint": "8.49.0",
+    "jest": "^29.6.4",
     "nodemon": "3.0.1"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
