--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Answers to part4 of fullstackopen course",
   "main": "node index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "jest --verbose",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
     "lint": "eslint ."
   },
   "repository": {
@@ -23,13 +23,15 @@
     "cors": "2.8.5",
     "dotenv": "16.3.1",
     "express": "4.18.2",
-    "lodash": "^4.17.21",
+    "lodash": "4.17.21",
     "mongoose": "7.5.0"
   },
   "devDependencies": {
+    "cross-env": "7.0.3",
     "eslint": "8.49.0",
-    "jest": "^29.6.4",
-    "nodemon": "3.0.1"
+    "jest": "29.6.4",
+    "nodemon": "3.0.1",
+    "supertest": "6.3.3"
   },
   "jest": {
     "testEnvironment": "node"
