--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
     "eslint": "8.49.0",
     "jest": "29.6.4",
     "nodemon": "3.0.1",
-    "supertest": "6.3.3"
+    "supertest": "^6.3.3"
   },
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "globalTeardown": "./tests/teardown.js"
   }
 }
