--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   },
   "homepage": "https://github.com/patchamama/fullstackopen-part4-bloglist#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "2.8.5",
     "dotenv": "16.3.1",
     "express": "4.18.2",
     "express-async-errors": "3.1.1",
     "lodash": "4.17.21",
-    "mongoose": "7.5.0"
+    "mongoose": "7.5.0",
+    "mongoose-unique-validator": "^4.0.0"
   },
   "devDependencies": {
     "cross-env": "7.0.3",
